	  - Manage (i.e. SHOW only) Sudo Administration in Computers->Global and Computers-[physical server].
	  - Show a 'DNS Administration' in Computers->Global (and a list of ALL DNS domains in a
	    'DNS Zones - Global' below the Global branch).
	  - Support setting TXT records for hosts in DNS manager.
	  - Support changing aRecords globaly (replace IP1 with IP2 in the whole database).

	API changes
	  - Rewrite (simplify) the API. Move the following function into include/pql.inc as methods
	    of the pql class:
	      include/pql_search.inc:pql_search(),
	      include/pql_search.inc:pql_get_attribute(),
	      include/pql_search.inc:pql_get_dn()
	      include/pql_write.inc:pql_write_add()
	      include/pql_write.inc:pql_write_mod()
	      include/pql_write.inc:pql_write_del()
	      include/pql_write.inc:pql_write_ren()
	    + This lead to changes in the rest of the API as well. No need to call functions with
	      the LDAP linkid any more. Instead, since the pql class handle is global any way, just
	      import it in any functions that need it.
	  - Prefix the kadmin_* functions with the usual 'pql_' prefix.

	Misc changes
	  - Added Strong password option to meet SOX & DSS/PCI compliance
	  - Added branch option to start in users own account when logging in (this is experimental don't use in production)
	  - Prettier debug output in include/pql_search.inc:pql_search()
	  - Explain 'null host' in 'include/attrib.control.smtproutes.inc:smtproutes_help()'
	  - When adding a branch admin in include/attrib.administrator.inc:attribute_save(), we must make sure that any
	    user templates' ACI is also updated. This so that a branch admin can READ templates (so he/she will be able
	    to add users!).
	  - Lowercase home/mail directory values when creating domain.
	  - Support for global memory cache for speed increase. Uses memcached and memcache.so
	    PECL module. See doc/README.Memcache.