@@ -1,169 +1,37 @@
 <?php
 // navigation bar
-// $Id: left.php,v 2.128 2007-02-15 12:37:49 turbo Exp $
+// $Id: left.php,v 2.129 2007-02-19 11:03:07 turbo Exp $
 
 // {{{ Setup session etc
 require("./include/pql_session.inc");
 
 require($_SESSION["path"]."/include/pql_config.inc");
 require($_SESSION["path"]."/left-head.html");
-
-$_pql = new pql($_SESSION["USER_HOST"], $_SESSION["USER_DN"], $_SESSION["USER_PASS"], false, 0);
-if($_pql->ldap_error) {
-  unset($_SESSION["USER_ID"]);
-  unset($_SESSION["USER_PASS"]);
-  unset($_SESSION["USER_DN"]);
-  
-  die("$_pql->ldap_error<br><a href=\"index.php\" target=\"_top\">".$LANG->_('Login again')."</a>");
-}
 // }}}
 
-// {{{ Find out if we're to run in ADVANCE/SIMPLE mode
-if($_REQUEST["advanced"] == 1) {
-  $checked  = " CHECKED";
-  $_SESSION["ADVANCED_MODE"] = 1;
-} else {
-  $checked  = "";
-  $_SESSION["ADVANCED_MODE"] = 0;
-}
-// }}}
-
-// {{{ ---------------- LDAP host, user, login/logout information etc
+// {{{ Server control header
+$div_counter = 0;
 ?>
-  <!-- Link to the logged in user information page -->
-  <div id="el1Parent" class="parent" style="margin-bottom: 5px">
-    <?=$LANG->_('User')?>:
-    <nobr>
-      <a class="item" href="user_detail.php?rootdn=<?php echo pql_get_rootdn($_SESSION["USER_DN"], 'left.php')?>&user=<?=urlencode($_SESSION["USER_DN"])?>">
-        <span class="heada"><b><?=$_SESSION["USER_ID"]?></b></span>
+    <!-- Server Control -->
+    <div id="el<?=$div_counter?>Parent" class="parent">
+      <a class="item" href="control.php">
+        <font color="black" class="heada"><b>Users</b></font>
       </a>
-    </nobr>
-  </div>
+    </div>
 
-<?php if($_SESSION["ADVANCED_MODE"]) {
-		$host = split(';', $_SESSION["USER_HOST"]);
+<?php
+  $div_counter++;
 
-		// If it's an LDAP URI, replace "%2f" with "/" -> URLdecode
-		$host[0] = urldecode($host[0]);
+if($_SESSION["ALLOW_BRANCH_CREATE"] and $_SESSION["ADVANCED_MODE"]) {
 ?>
-  <!-- LDAP Server information -->
-  <div id="el2Parent" class="parent" style="margin-bottom: 5px">
-    <?=$LANG->_('LDAP Server')?>:
-    <nobr>
-      <span class="heada"><?=pql_maybe_idna_decode($host[0])?><?php if(!eregi('^ldapi:', $host[0])) { echo ":".$host[1]; } ?></span>
-    </nobr>
-  </div>
-
-<?php } ?>
-
-  <!-- logout link -->
-  <div id="el3Parent" class="parent" style="margin-bottom: 5px">
-    <nobr>
-      <a class="item" href="index.php?logout=1" target="_parent">
-        <span class="heada"><?=$LANG->_('Log out')?></span>
-      </a>
-    </nobr>
-  </div>
-
-  <!-- Advanced Mode selector -->
-  <div id="el4Parent" class="parent">
-    <form method=post action="index2.php" target="_top">
-<?php if($_SESSION["konqueror"]) { ?>
-      <input type="checkbox" name="advanced" accesskey="a" onClick="this.form.submit()"<?=$checked?>><?=$LANG->_('\uA\Udvanced mode')."\n"?>
-<?php } elseif($_SESSION["lynx"]) { ?>
-<?php   if($_REQUEST["advanced"] == 1) { ?>
-      <input type="hidden" name="advanced" value="0">
-      <input type="submit" value="<?=$LANG->_('Simple mode')."\n"?>">
-<?php   } else { ?>
-      <input type="hidden" name="advanced" value="1">
-      <input type="submit" value="<?=$LANG->_('Advanced mode')."\n"?>">
-<?php   } ?>
-<?php } else { ?>
-      <input type="checkbox" name="advanced" accesskey="a" onChange="this.form.submit()"<?=$checked?>><?=$LANG->_('\uA\Udvanced mode')."\n"?>
-<?php } ?>
-    </form>
-  </div>
-<?php if($_SESSION["ALLOW_BRANCH_CREATE"] and $_SESSION["ADVANCED_MODE"]) { ?>
 
   <!-- Add domain branch link -->
   <div id="el5Parent" class="parent">
     <a href="domain_add_form.php?rootdn=<?=$_SESSION["BASE_DN"][0]?>"><?php echo pql_complete_constant($LANG->_('Add %what%'), array('what' => $LANG->_('domain branch'))); ?></a><br>
   </div>
 
-<?php }
-// }}}
-?>
-
-  <!-- Home branch -->
 <?php
-// {{{ ---------------- HOME BRANCH (PROJECT URLS ETC)
-// {{{ Level 1:      phpQLAdmin configuration etc
-$div_counter = 10; // Initialize the global counter
-pql_format_tree("<b>".$LANG->_('Home')."</b>", 'home.php');
-// }}}
-
-// {{{ Level 2[abc]: Search links, configuration and tests and setup
-// Level 2a: Search links
-$links = array($LANG->_('Directory search') => 'user_search.php');
-pql_format_tree($LANG->_('Search'), 0, $links, 1);
-
-if($_SESSION["ADVANCED_MODE"] and $_SESSION["ALLOW_BRANCH_CREATE"]) {
-  // Level 2b: Configuration and tests
-  $links = array($LANG->_('phpQLAdmin Configuration')	=> 'config_detail.php',
-				 $LANG->_('Test LDAP-Connection')		=> 'config_ldaptest.php');
-  pql_format_tree($LANG->_('phpQLAdmin Configuration'), 0, $links, 1);
-  
-  // Level 2c: LDAP server setup etc
-  $links = array($LANG->_('LDAP Syntaxes')		=> 'config_ldap.php?type=ldapsyntaxes',
-				 $LANG->_('LDAP Matching rules')	=> 'config_ldap.php?type=matchingrules',
-				 $LANG->_('LDAP Attribute types')	=> 'config_ldap.php?type=attributetypes',
-				 $LANG->_('LDAP Object classes')	=> 'config_ldap.php?type=objectclasses');
-  pql_format_tree($LANG->_('LDAP Server Configuration'), 0, $links, 1);
-  
-  if($_SESSION["MONITOR_BACKEND_ENABLED"] and $_SESSION["ALLOW_GLOBAL_CONFIG_SAVE"]) {
-	// Level 2c2: LDAP Server status
-	$links = array($LANG->_('LDAP Server Status')		=> 'status_ldap.php?type=basics',
-				   $LANG->_('LDAP Connection Status')	=> 'status_ldap.php?type=connections',
-				   $LANG->_('LDAP Database Status')		=> 'status_ldap.php?type=databases');
-	pql_format_tree($LANG->_('LDAP Server Statistics'), 0, $links, 1);
-  }
 }
-// }}}
-
-// {{{ Level 2d:     Documentation etc
-$links = array($LANG->_('Documentation')		=> 'doc/index.php');
-if($_SESSION["ADVANCED_MODE"]) {
-  $new = array($LANG->_('What\'s left todo')		=> 'TODO',
-			   $LANG->_('What\'s been done')		=> 'CHANGES');
-  $links = $links + $new;
-  
-  if($_SESSION["ALLOW_BRANCH_CREATE"]) {
-	$new = array($LANG->_('Language translator')	=> 'tools/update_translations.php',
-				 $LANG->_('PHP Information dump')	=> 'tools/phpinfo.php');
-	$links = $links + $new;
-  }
-}
-pql_format_tree($LANG->_('Documentation'), 0, $links, 1);
-// }}}
-
-// {{{ Level 2[ef]:  Main site and misc QmailLDAP links
-if($_SESSION["ADVANCED_MODE"] and $_SESSION["ALLOW_BRANCH_CREATE"]) {
-  // Level 2e: Main site and general phpQLAdmin links
-  $links = array('phpQLAdmin @ Bayour'			=> 'http://phpqladmin.com/',
-				 $LANG->_('Bugtracker')			=> 'http://bugs.bayour.com/');
-  pql_format_tree($LANG->_('phpQLAdmin Site Specifics'), 0, $links, 1);
-  
-  // Level 2f: Misc QmailLDAP/Controls links
-  $links = array('Official Qmail-LDAP pages'			=> 'http://www.qmail-ldap.org/',
-				 'Life with Qmail-LDAP'			=> 'http://www.lifewithqmail.org/ldap/',
-				 'Life with Qmail'				=> 'http://www.lifewithqmail.org/');
-  pql_format_tree($LANG->_('Misc Qmail & Qmail-LDAP'), 0, $links, 1);
-}
-// }}}
-
-// This an ending for the initial parent (level 0)
-pql_format_tree_end();
-unset($links);
 // }}}
 
 // {{{ ---------------- GET THE DOMAINS/BRANCHES
@@ -260,9 +128,6 @@ if(!isset($domains) or !is_array($domains)) {
 	// Get Root DN
 	$rootdn = pql_get_rootdn($domain, 'left.php');
 
-	// Show users is either 'Yes', unset (same thing) or 'No'.
-	$show_users = pql_get_define("PQL_CONF_SHOW_USERS", $rootdn);
-
 	// Create a user search filter (only look for mail users - !?!? - or Samba accounts).
 	$filter  = "(&(".pql_get_define("PQL_CONF_REFERENCE_USERS_WITH", $rootdn)."=*)(|(";
 	$filter .= pql_get_define("PQL_ATTR_MAIL")."=*)(sambaSID=*)))";
@@ -281,7 +146,7 @@ if(!isset($domains) or !is_array($domains)) {
 	  
 	  // Just incase there's user(s) at the base of the domain branch...
 	  $users = $_pql->get_dn($domain, $filter, 'ONELEVEL');
-	  if(is_array($users) and ($show_users or !isset($show_users)))
+	  if(is_array($users))
 		// We have users in this domain
 		pql_left_htmlify_userlist($rootdn, $domain, $subbranch, $users, $links);
 		
@@ -337,7 +202,7 @@ if(!isset($domains) or !is_array($domains)) {
 					   => "user_add.php?rootdn=$rootdn&domain=$domain");
 	  }
 	  
-	  if(is_array($users) and ($show_users or !isset($show_users)))
+	  if(is_array($users))
 		// We have users in this domain
 		pql_left_htmlify_userlist($rootdn, $domain, $subbranch, $users, $links);
 	
